Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -1271,6 +1271,28 @@ document.addEventListener('DOMContentLoaded', function () {
 </script>
   <!-- al final del body -->
 <script src="/js/contact.js"></script>
+
+<script>
+ window.difyChatbotConfig = {
+  token: 'u6ZRgC965S5ppUAP'
+ }
+</script>
+<script
+ src="https://udify.app/embed.min.js"
+ id="u6ZRgC965S5ppUAP"
+ defer>
+</script>
+<style>
+  #dify-chatbot-bubble-button {
+    /* Color azul oficial C.U.R.A. */
+    background-color: #004E85 !important;
+  }
+  #dify-chatbot-bubble-window {
+    width: 24rem !important;
+    height: 40rem !important;
+  }
+</style>
+
 </body>
 </body>
 </html>
