Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -373,6 +373,15 @@
                 <p class="text-xs text-cura-accentLight">Recibí recordatorios automáticos de vacunas, chequeos anuales y controles preventivos según tu edad.</p>
             </div>
 
+<div class="sm:col-span-2 lg:col-span-2 bg-gradient-to-r from-cura-card to-cura-primaryDark rounded-xl border border-cura-accent/60 p-5 shadow-md transition hover:-translate-y-1">
+    <div class="flex items-center gap-3 mb-2">
+        <span class="text-xl">🧠</span>
+        <h3 class="text-sm font-bold text-white">Prioridad en Salud Mental</h3>
+    </div>
+    <p class="text-xs text-cura-accentLight">Digitalizamos el seguimiento terapéutico con <strong>máxima reserva de identidad</strong>. Acceso inmediato a redes de contención y turnos prioritarios en crisis, garantizando continuidad entre profesionales.</p>
+</div>
+
+
         </div> <div class="mt-12 flex justify-center w-full">
             <a href="/Informacion/informacion.html" 
                class="group relative inline-flex items-center gap-2 px-8 py-3 bg-cura-accent hover:bg-cura-accent/80 text-white font-medium text-sm md:text-base rounded-full transition-all duration-300 shadow-lg hover:shadow-cura-accent/25 hover:-translate-y-0.5 border border-white/10">
